@@ -158,9 +158,7 @@ these clouds restores your energy level."))
       [drop-energy-gas-cluster self r c]))
   ;; drop ship resupply room
   (labels ((drop-ship (r c)
-	     [drop-cell self (clone (if (= 0 (random 2))
-					(symbol-value '=olvac=)
-					(symbol-value '=vomac=)))
+	     [drop-cell self (clone (symbol-value '=olvac=))
 			r c :loadout t :no-collisions t]))
     (let ((r0 (random 20))
 	  (c0 (random width)))
