@@ -5,18 +5,21 @@ http://common-lisp.net/pipermail/rlx/2009-January/000000.html
 
 * TASKS
 
-** TODO tell player whether it is safe to eva
+
+** TODO grav jump boots
+** TODO player uses oxygen whenever out of vehicle
+** TODO refill oxygen infinitely at vehicle
+** TODO no insta-death 
+** TODO gravity levels where gravity is in wrong direction... aspects of a platformer
+** TODO jump to gravity boot walls like in dead space, need gravboots
+** TODO rescue mission where you take an agent back to a rendezvous point on mars
 ** TODO Conditions
-** TODO poison from toxic hazards
-** TODO tox hypo
+*** TODO poison from toxic hazards
+*** TODO tox hypo
 ** TODO review unused pngs
-** TODO Change hive to greenish bg color? or brown
 ** TODO bangai-o ish lasers that stick into a corridor and block you
 ** TODO throwable bombs/missiles
 ** TODO stealth where enemies do not always sense you! LOS at least
-** TODO gravity levels where gravity is in wrong direction... aspects of a platformer
-** TODO jump to gravity boot walls like in dead space
-** TODO rescue mission where you take an agent back to a rendezvous point on mars
 ** TODO MARKETING PLAN FOR BETA RELEASE
 *** TODO make list contacts for sites, blogs, mags, casts
 *** TODO google analytics?
